--- a/town-container-android/res/values/colors.xml
+++ b/town-container-android/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <color name="background_color_search">#61605b</color>
     <color name="background_list_item">#e7e1d0</color>
     <color name="background_color_search_main_list">#e7e1d0</color>
@@ -10,4 +9,7 @@
     <color name="fb_tag_friend_bg">#eaddcf</color>
     <color name="fb_search_friend_et_bg">#7d7465</color>
     <color name="bg_go_btn">#f9914b</color>
+    
+    <color name="category_list_bg_color">#e0e0e0</color>
+    <color name="category_list_divider_color">#000000</color>
 </resources>
