--- a/town-container-android/res/layout/web_with_upload.xml
+++ b/town-container-android/res/layout/web_with_upload.xml
@@ -2,80 +2,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
-
-            <ImageView
-                android:id="@+id/iv_header_web"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/top_bar" />
-
-            <TextView
-                android:id="@+id/tv_header_web"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="5dip"
-                android:gravity="left|center_horizontal"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="2.0"
-                android:text=""
-                android:textColor="@android:color/white"
-                android:textSize="15dip" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white" >
-
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:text="UPLOAD YOUR PHOTOS"
-                    android:textColor="@android:color/black" />
-
-                <Button
-                    android:id="@+id/bt_upload"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerVertical="true"
-                    android:text="Upload photos"
-                    android:visibility="visible" />
-            </RelativeLayout>
-        </LinearLayout>
-    </LinearLayout>
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="wrap_content"
+        android:background="@drawable/header_bg">
 
-        <WebView
-            android:id="@+id/webview"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+      <LinearLayout
+          android:id="@+id/header_back_button"       
+          android:layout_width="60dp"
+          android:layout_height="35dp"
+          android:layout_margin="10dp"          
+          android:layout_centerVertical="true"/>
+
+      <TextView
+          android:id="@+id/tv_header_web"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"      
+          android:textColor="@android:color/black" 
+          android:textSize="@dimen/text_size_xlarge"
+          android:textStyle="bold"
+          android:layout_centerVertical="true" 
+          android:layout_centerHorizontal="true"/>
+            
     </RelativeLayout>
+
+   <RelativeLayout
+       android:layout_width="fill_parent"
+       android:layout_height="wrap_content" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:text="@string/upload_photo"
+            android:textColor="@android:color/black" />
+
+        <Button
+            android:id="@+id/bt_upload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
+            android:text="Upload photos"
+            android:visibility="visible" />
+        </RelativeLayout>    
+
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
 </LinearLayout>
