--- a/town-container-android/res/layout/web.xml
+++ b/town-container-android/res/layout/web.xml
@@ -4,29 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/header_bg">
-
-      <LinearLayout
-          android:id="@+id/header_back_button"       
-          android:layout_width="60dp"
-          android:layout_height="35dp"
-          android:layout_margin="10dp"          
-          android:layout_centerVertical="true"/>
-
-      <TextView
-          android:id="@+id/tv_header_web"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"      
-          android:textColor="@android:color/black" 
-          android:textSize="@dimen/text_size_xlarge"
-          android:textStyle="bold"
-          android:layout_centerVertical="true" 
-          android:layout_centerHorizontal="true"/>
-            
-    </RelativeLayout>
+    <include layout="@layout/header"/>
 
     <WebView
         android:id="@+id/webview"
