--- a/town-container-android/res/layout/list_item_partners.xml
+++ b/town-container-android/res/layout/list_item_partners.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/background_color_search_main_list"
-    android:minHeight="40dip" >
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
 
     <TextView
         android:id="@+id/name"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:text=""
-        android:textColor="@color/font_color_main_list"
-        android:textSize="20dip"
+        android:layout_height="wrap_content"        
+        android:textColor="@color/search_list_fg_color"
+        android:background="@color/search_list_bg_color"
+        android:textSize="22dp"
         android:layout_centerVertical="true"
-        android:textStyle="bold" />
+        android:textStyle="bold" 
+        android:padding="9dp"/>
+    
+    <ImageView
+        android:id="@+id/circle"
+        android:src="@drawable/cell_circle"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:paddingRight="20dp"
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/empty" />
+        
 </RelativeLayout>
