--- a/town-container-android/res/layout/main.xml
+++ b/town-container-android/res/layout/main.xml
@@ -2,115 +2,123 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/search_list_bg_color">
 
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+   <ImageView
+       android:layout_width="fill_parent"
+       android:layout_height="wrap_content"
+       android:adjustViewBounds="true"
+       android:src="@drawable/search_header" 
+       android:contentDescription="@string/empty"/>
 
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/header" />
-    </FrameLayout>
+       <LinearLayout
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:background="@drawable/search_top"           
+           android:paddingTop="5dp"
+           android:paddingBottom="15dp"
+           android:paddingLeft="15dp"
+           android:paddingRight="15dp"
+           android:orientation="vertical"
+           >
+            
+           <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#555555" 
+                    android:textStyle="bold"
+                    android:layout_marginLeft="5dp"                    
+                    android:text="@string/enter_ZIP"/> 
+           
+   
 
-    <LinearLayout
-        
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background_color_search"
-        android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:weightSum="1.0" >
-
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dip"
-            android:layout_weight=".85" >
-
-            <EditText
-                android:id="@+id/et_input"
+            
+            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:baselineAligned="true"                
+                android:weightSum="1.0"
+                >
                 
-                android:background="@drawable/rounded_search_edittext"
-                android:hint="@string/enter_ZIP"
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:paddingTop="1dp"
+                    android:paddingRight="11dp"
+                    android:layout_weight=".85"                
+                    >
+
+                    <EditText
+                        android:id="@+id/et_input"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/search_bar"
+                        android:hint="@string/empty"                    
+                        android:singleLine="true"
+                        android:textColor="#CB0000"
+                        android:textStyle="bold" 
+                        android:includeFontPadding="true"
+                        android:paddingRight="35dp"
+                        android:paddingLeft="35dp"
+                        />
+                    
+                    <ImageButton
+                        android:id="@+id/search_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/search_btn"
+                        android:layout_gravity="center|left"
+                        android:layout_marginLeft="8dip"
+                        android:layout_marginBottom="2dip"
+                        android:contentDescription="@string/empty" />
+                    
+                    
+                    <ImageButton
+                        android:id="@+id/bt_clear_edittext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bt_clear_input_edittext"
+                        android:layout_gravity="center|right"
+                        android:layout_marginRight="6dip"
+                        android:layout_marginBottom="2dip"
+                        android:contentDescription="@string/empty" />
+                </FrameLayout>
                 
-                android:paddingLeft="10dip"
-                android:paddingTop="5dip"
-                android:paddingRight="5dip"
-                android:paddingBottom="5dip"
-                android:singleLine="true" />
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"                                        
+                    android:layout_weight=".15"
+                    
+                    >
+                  <ImageButton
+                      android:id="@+id/bt_search"
+                      android:layout_width="40dip"
+                      android:layout_height="40dip"
+                      android:layout_gravity="top|center_horizontal"
+                                                       
+                      android:background="@drawable/go_button"                
+                                                                      
+                      android:contentDescription="@string/empty"                      
+                      />
+                </FrameLayout>
+                
+                
+            </LinearLayout>
+        
+        
+        
+        </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/bt_clear_edittext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bt_clear_input_edittext"
-                android:src="@drawable/bt_clear_input_edittext"
-                android:layout_gravity="center|right"
-                android:layout_marginRight="6dip"
-                 
-                />
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/frameLayoutSearchButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".15"
-            android:layout_margin="5dip" 
-            >
-
-            <ImageButton
-                android:id="@+id/bt_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:adjustViewBounds="true"
-                android:background="@drawable/bt_go_res"
-                android:textColor="@android:color/white" />
-
-        </FrameLayout>
-    </LinearLayout>
 
     <ListView
         android:id="@+id/@android:id/list"
         android:layout_width="wrap_content"
         android:layout_height="0dip"
         android:layout_weight="1"
-        android:background="@color/background_color_search_main_list"
-        android:divider="@color/devider_main_list"
+        android:background="@color/search_list_bg_color"        
+        android:divider="@drawable/shadow"
         android:dividerHeight="2dip"
         android:scrollbars="none" >
     </ListView>
-
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/footer" />
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_gravity="right" >
-
-            <ImageButton
-                android:id="@+id/bt_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:background="@drawable/info"
-                android:src="@drawable/info" />
-        </FrameLayout>
-    </FrameLayout>
-
 </LinearLayout>
