--- a/town-container-android/res/layout/place.xml
+++ b/town-container-android/res/layout/place.xml
@@ -80,7 +80,10 @@
         <ImageView
             android:id="@+id/iv_place_picture"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/empty"    
+            />
+        
         <ProgressBar
             android:id="@+id/pb_place_picture"
             android:layout_width="wrap_content"
