--- a/town-container-android/res/layout/upload_view.xml
+++ b/town-container-android/res/layout/upload_view.xml
@@ -14,7 +14,8 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:adjustViewBounds="true" />
+            android:adjustViewBounds="true" 
+            android:contentDescription="@string/empty"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -29,14 +30,14 @@
                 android:layout_width="0dip"
                 android:layout_height="fill_parent"
                 android:layout_weight=".15"
-                android:text="Cancel"
+                android:text="@string/cancel"
                 android:textSize="5dip" />
 
             <EditText
                 android:id="@+id/et_enter_name_description"
                 android:layout_width="0dip"
                 android:layout_height="fill_parent"
-                android:hint="Write a caption..."
+                android:hint="@string/write_a_caption"
                 android:textSize="10dip"
                 android:singleLine="true"
                 android:layout_weight=".70" />
@@ -46,7 +47,7 @@
                 android:layout_width="0dip"
                 android:layout_height="fill_parent"
                 android:layout_weight=".15"
-                android:text="Upload"
+                android:text="@string/upload"
                 android:textSize="5dip" />
         </LinearLayout>
     </RelativeLayout>
