--- a/town-container-android/res/layout/facebook_places.xml
+++ b/town-container-android/res/layout/facebook_places.xml
@@ -2,42 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/white"
-    android:orientation="vertical" >
+    android:orientation="vertical">
+    
+    <include layout="@layout/header"/>
 
-    <RelativeLayout
+    <TextView        
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-
-        <ImageView
-            android:id="@+id/iv_header_fb_places"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            />
-
-        <TextView
-            android:id="@+id/tv_header_fb_places"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dip"
-            android:gravity="left|center_horizontal"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="2.0"
-            android:text=""
-            android:textColor="@android:color/white"
-            android:textSize="15dip" />
-    </RelativeLayout>
-
-    <ListView
-        android:id="@+id/@android:id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="fill_parent"
+        android:text="@string/coming_soon" 
+        android:gravity="center" />
 
 </LinearLayout>
