--- a/town-container-android/res/layout/default_json.xml
+++ b/town-container-android/res/layout/default_json.xml
@@ -4,7 +4,10 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/header"/>
+    <fragment android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/header_fragment"
+              android:name="com.townwizard.android.HeaderFragment" />
 
     <TextView        
         android:layout_width="fill_parent"
