--- a/town-container-android/res/layout/web.xml
+++ b/town-container-android/res/layout/web.xml
@@ -4,8 +4,11 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/header"/>
-
+    <fragment android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/header_fragment"
+              android:name="com.townwizard.android.HeaderFragment" />
+    
     <WebView
         android:id="@+id/webview"
         android:layout_width="fill_parent"
