--- a/town-container-android/res/layout/facebook_places.xml
+++ b/town-container-android/res/layout/facebook_places.xml
@@ -9,7 +9,8 @@
               android:id="@+id/header_fragment"
               android:name="com.townwizard.android.HeaderFragment" />    
 
-    <TextView        
+    <TextView
+        android:id="@+id/login_status"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:text="@string/coming_soon" 
