Resolved build issues introduced by upgrading to new FB SDK and creating the header fragment

--- a/town-container-android/res/layout/web.xml
+++ b/town-container-android/res/layout/web.xml
@@ -4,10 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <fragment android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:id="@+id/header_fragment"
-              android:name="com.townwizard.android.HeaderFragment" />
+    <include layout="@layout/header_fragment"/>
     
     <WebView
         android:id="@+id/webview"
