--- a/town-container-android/res/layout/default_json.xml
+++ b/town-container-android/res/layout/default_json.xml
@@ -4,11 +4,8 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <fragment android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:id="@+id/header_fragment"
-              android:name="com.townwizard.android.HeaderFragment" />
-
+    <include layout="@layout/header_fragment"/>
+    
     <TextView        
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
