--- a/town-container-android/res/layout/categories.xml
+++ b/town-container-android/res/layout/categories.xml
@@ -5,8 +5,7 @@
     android:orientation="vertical"
     android:background="@color/category_list_bg_color">
 
-
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android" 
+    <ListView 
         android:id="@+id/category_list"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
