--- a/town-container-android/res/layout/facebook_places.xml
+++ b/town-container-android/res/layout/facebook_places.xml
@@ -2,15 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@android:color/white">
 
     <include layout="@layout/header_fragment"/>
     
-    <TextView
-        android:id="@+id/login_status"
+    <ListView 
+        android:id="@+id/places_list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:text="@string/coming_soon" 
-        android:gravity="center" />
+        android:layout_height="0dp"
+        android:layout_weight="1"        
+        android:listSelector="@android:color/transparent"
+        android:cacheColorHint="@android:color/transparent"
+        android:divider="@color/category_list_divider_color"
+        android:dividerHeight="1dp"
+        android:background="@drawable/tw_logo_bg" />
 
 </LinearLayout>
