Facebook checking work in progress: read-only friend list with images is ready

--- a/town-container-android/res/layout/facebook_checkin.xml
+++ b/town-container-android/res/layout/facebook_checkin.xml
@@ -4,13 +4,8 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:background="@color/search_list_bg_color">
-
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/search_header" 
-        android:contentDescription="@string/empty"/>
+    
+    <include layout="@layout/header_fragment"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -28,7 +23,7 @@
             android:textColor="#555555" 
             android:textStyle="bold"
             android:layout_marginLeft="5dp"                    
-            android:text="@string/enter_ZIP"/> 
+            android:text="@string/update_your_status"/> 
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -44,38 +39,19 @@
                 android:layout_weight=".85">
 
                 <EditText
-                    android:id="@+id/et_input"
+                    android:id="@+id/facebook_status"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/search_bar"
-                    android:hint="@string/empty"                    
+                    android:hint="@string/empty"
                     android:singleLine="true"
                     android:textColor="#CB0000"
                     android:textStyle="bold" 
                     android:includeFontPadding="true"
                     android:paddingRight="35dp"
-                    android:paddingLeft="35dp" />
+                    android:paddingLeft="35dp" 
+                    android:text="@string/whats_on_your_mind"/>
                     
-                <ImageButton
-                    android:id="@+id/search_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/search_btn"
-                    android:layout_gravity="center|left"
-                    android:layout_marginLeft="8dip"
-                    android:layout_marginBottom="2dip"
-                    android:contentDescription="@string/empty" />
-                    
-                <ImageButton
-                    android:id="@+id/bt_clear_edittext"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bt_clear_input_edittext"
-                    android:layout_gravity="center|right"
-                    android:layout_marginRight="6dip"
-                    android:layout_marginBottom="2dip"
-                    android:contentDescription="@string/empty" />
-            
             </FrameLayout>
                 
             <FrameLayout
@@ -84,11 +60,11 @@
                 android:layout_weight=".15">
                   
               <ImageButton
-                  android:id="@+id/bt_search"
+                  android:id="@+id/facebook_status_post"
                   android:layout_width="40dip"
                   android:layout_height="40dip"
                   android:layout_gravity="top|center_horizontal"
-                  android:background="@drawable/go_button"                
+                  android:background="@drawable/post_button"                
                   android:contentDescription="@string/empty" />
             
             </FrameLayout>
@@ -96,7 +72,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/@android:id/list"
+        android:id="@+id/friend_list"
         android:layout_width="wrap_content"
         android:layout_height="0dip"
         android:layout_weight="1"
