--- a/town-container-android/res/layout/partners.xml
+++ b/town-container-android/res/layout/partners.xml
@@ -4,8 +4,13 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:background="@color/search_list_bg_color">
-    
-    <include layout="@layout/header_fragment"/>
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/search_header" 
+        android:contentDescription="@string/empty"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -23,7 +28,7 @@
             android:textColor="#555555" 
             android:textStyle="bold"
             android:layout_marginLeft="5dp"                    
-            android:text="@string/update_your_status"/> 
+            android:text="@string/enter_ZIP"/> 
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -39,19 +44,38 @@
                 android:layout_weight=".85">
 
                 <EditText
-                    android:id="@+id/facebook_status"
+                    android:id="@+id/et_input"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/search_bar"
-                    android:hint="@string/empty"
+                    android:hint="@string/empty"                    
                     android:singleLine="true"
                     android:textColor="#CB0000"
                     android:textStyle="bold" 
                     android:includeFontPadding="true"
                     android:paddingRight="35dp"
-                    android:paddingLeft="35dp" 
-                    android:text="@string/whats_on_your_mind"/>
+                    android:paddingLeft="35dp" />
                     
+                <ImageButton
+                    android:id="@+id/search_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/search_btn"
+                    android:layout_gravity="center|left"
+                    android:layout_marginLeft="8dip"
+                    android:layout_marginBottom="2dip"
+                    android:contentDescription="@string/empty" />
+                    
+                <ImageButton
+                    android:id="@+id/bt_clear_edittext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bt_clear_input_edittext"
+                    android:layout_gravity="center|right"
+                    android:layout_marginRight="6dip"
+                    android:layout_marginBottom="2dip"
+                    android:contentDescription="@string/empty" />
+            
             </FrameLayout>
                 
             <FrameLayout
@@ -60,11 +84,11 @@
                 android:layout_weight=".15">
                   
               <ImageButton
-                  android:id="@+id/facebook_status_post"
+                  android:id="@+id/bt_search"
                   android:layout_width="40dip"
                   android:layout_height="40dip"
                   android:layout_gravity="top|center_horizontal"
-                  android:background="@drawable/post_button"                
+                  android:background="@drawable/go_button"                
                   android:contentDescription="@string/empty" />
             
             </FrameLayout>
@@ -72,7 +96,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/friend_list"
+        android:id="@+id/@android:id/list"
         android:layout_width="wrap_content"
         android:layout_height="0dip"
         android:layout_weight="1"
