--- a/town-container-android/res/layout/facebook_checkin.xml
+++ b/town-container-android/res/layout/facebook_checkin.xml
@@ -70,6 +70,31 @@
             </FrameLayout>
        </LinearLayout>       
     </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/search_friends_bg">
+        
+        <ImageView
+            android:src="@drawable/search_friends"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/empty"/>
+        
+       <EditText
+            android:id="@+id/search_friends"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_friends_text_bg"
+            android:hint="@string/empty"
+            android:singleLine="true"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" 
+            android:includeFontPadding="true"
+            android:text="@string/search_for_friends"/>        
+        
+    </LinearLayout>    
 
     <ListView
         android:id="@+id/friend_list"
@@ -79,6 +104,8 @@
         android:background="@color/search_list_bg_color"        
         android:divider="@drawable/shadow"
         android:dividerHeight="2dip"
+        android:listSelector="@android:color/transparent"
+        android:cacheColorHint="@android:color/transparent"
         android:scrollbars="none" >
     </ListView>
 </LinearLayout>
