--- a/town-container-android/res/layout/friend.xml
+++ b/town-container-android/res/layout/friend.xml
@@ -20,17 +20,17 @@
         android:textStyle="bold"        
         android:layout_toRightOf="@+id/friend_image"
         android:layout_centerVertical="true"/>
-    
-    <!-- 
+   
     <ImageView
-        android:src="@drawable/forward_arrow"
+        android:id="@+id/friend_selected"
+        android:src="@drawable/plus_button"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_marginRight="10dp"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/empty" />
-         -->
-    
+        android:contentDescription="@string/empty" 
+        android:visibility="invisible" />
+        
 </RelativeLayout>
