--- a/town-container-android/res/layout/facebook_checkin.xml
+++ b/town-container-android/res/layout/facebook_checkin.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="@color/search_list_bg_color">
     
-    <include layout="@layout/header_fragment"/>
+    <include layout="@layout/header"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
