--- a/town-container-android/res/layout/facebook_places.xml
+++ b/town-container-android/res/layout/facebook_places.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="#E5E5E5">
 
-    <include layout="@layout/header_fragment"/>
+    <include layout="@layout/header"/>
     
     <ListView 
         android:id="@+id/places_list"
