--- a/town-container-android/res/layout/header.xml
+++ b/town-container-android/res/layout/header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-
     
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/header"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/header_bg">
@@ -42,6 +42,3 @@
         </LinearLayout>
           
     </RelativeLayout>
-
-
-
