--- a/town-container-android/res/layout/back_button.xml
+++ b/town-container-android/res/layout/back_button.xml
@@ -6,13 +6,15 @@
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
+      
       <ImageView
             android:src="@drawable/back_button"
-            android:layout_width="55dp"
-            android:layout_height="28dp"
+            android:layout_width="60dp"
+            android:layout_height="32dp"
             android:scaleType="fitXY"
             android:layout_gravity="center"
             android:contentDescription="@string/empty"/>
+    
     </LinearLayout>
     
     <TextView
@@ -22,6 +24,9 @@
         android:textColor="@android:color/black" 
         android:textSize="@dimen/text_size_medium"
         android:textStyle="bold"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:includeFontPadding="true"
+        android:layout_marginBottom="1dp"
+        android:layout_marginLeft="5dp"/>
     
 </RelativeLayout>
