--- a/town-container-android/res/layout/category_list_header_p.xml
+++ b/town-container-android/res/layout/category_list_header_p.xml
@@ -5,7 +5,7 @@
         android:layout_height="wrap_content">
         
         <ImageView
-            android:id="@+id/iv_categories_header"
+            android:id="@+id/categories_header"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
