--- a/town-container-android/res/layout/partner_first.xml
+++ b/town-container-android/res/layout/partner_first.xml
@@ -3,26 +3,27 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
+    <ImageView
+        android:id="@+id/magic_wand"
+        android:src="@drawable/magic_wand"        
+        android:layout_width="35dp"
+        android:layout_height="50dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/empty"
+        android:paddingLeft="9dp"
+        />    
+ 
     <TextView
         android:id="@+id/name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"        
         android:textColor="@color/search_list_fg_color"
         android:background="@color/search_list_bg_color"
-        android:textSize="22sp"
+        android:textSize="19sp"
+        android:layout_toRightOf="@+id/magic_wand"
         android:layout_centerVertical="true"
-        android:textStyle="bold" 
-        android:padding="9dp"/>
+        android:textStyle="bold"
+        android:padding="9dp" 
+        />
     
-    <ImageView
-        android:id="@+id/circle"
-        android:src="@drawable/cell_circle"
-        android:layout_alignParentRight="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:paddingRight="20dp"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/empty" />
-        
 </RelativeLayout>
