--- a/town-container-android/res/layout/web_with_upload.xml
+++ b/town-container-android/res/layout/web_with_upload.xml
@@ -29,9 +29,6 @@
             android:visibility="visible" />
     </RelativeLayout>    
 
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
-
+    <include layout="@layout/webview"/>
+    
 </LinearLayout>
